# xyz_machine

./: CMakeLists.txt  README.md  package.xml
arduino/ManualControl/: ManualControl.ino
cfg/: 99-xyz-serial-port.rules  config.yaml
include/: config.h  main.h  serial_comm.h  websocket_server.h
scripts/: startup_tmux.sh  startup_xyz_machine.sh
src/: WebsocketServer.cpp  serial_comm.cpp  websocket_server.cpp  xyz_machine.cpp
www_client/: index.html
www_client/css/: bootstrap-4.0.0.css  style.css
www_client/scripts/: main.js  my_websocket.js
