<?xml version="1.0"?>
<package>
  <name>xyz_machine</name>
  <version>0.9.0</version>
  <description>The xyz_machine package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="salvador.dominguez@sagarobotics.com">salva</maintainer>
  <!--maintainer email="aplyer@github">aplyer</maintainer-->

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>yaml-cpp</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>yaml-cpp</run_depend>
  <run_depend>serial</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
